Reimplemented AWS storage session for uploads & outputs